@@ -3,7 +3,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.7.0</version>
+        <version>1.13.0</version>
         <relativePath />
     </parent>
 
@@ -12,6 +12,8 @@
     <name>KOMET</name>
     <version>1.14.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <inceptionYear>2015</inceptionYear>
 
     <licenses>
         <license>
@@ -22,9 +24,20 @@
         </license>
     </licenses>
 
+    <scm>
+        <url>http://www.github.com/ikmdev/komet</url>
+    </scm>
+
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/ikmdev/komet/issues</url>
+    </issueManagement>
+
+    <url>http://www.ikm.dev</url>
+
     <organization>
         <name>Integrated Knowledge Management</name>
-        <url>http://ikm.dev</url>
+        <url>http://www.ikm.dev</url>
     </organization>
 
     <modules>
@@ -86,84 +99,90 @@
         <dependencies>
             <!--Module Dependencies -->
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>artifact</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>builder</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>classification</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
-                <artifactId>amplifydetails</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>details</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>amplifydetails</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>list</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>navigator</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>search</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>progress</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>executor</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>framework</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>komet-terms</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>${project.parent.groupId}</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>preferences</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Tinkar Core Dependencies -->
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>common</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>${tinkar-core.groupId}</groupId>
                 <artifactId>entity</artifactId>
@@ -227,6 +246,12 @@
 
             <!-- External dependencies -->
             <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${openjfx.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>de.jangassen</groupId>
                 <artifactId>nsmenufx</artifactId>
                 <version>${nsmenufx.version}</version>
@@ -236,12 +261,6 @@
                 <groupId>org.controlsfx</groupId>
                 <artifactId>controlsfx</artifactId>
                 <version>${controlsfx.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-controls</artifactId>
-                <version>${openjfx.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
@@ -419,6 +438,7 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- Cross project dependencies -->
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -459,6 +479,7 @@
             <artifactId>common-java5</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -477,34 +498,5 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <annotationProcessorPaths>
-                        <annotationProcessorPath>
-                            <groupId>io.soabase.record-builder</groupId>
-                            <artifactId>record-builder-processor</artifactId>
-                            <version>${record-builder-processor.version}</version>
-                        </annotationProcessorPath>
-                        <annotationProcessorPath>
-                            <groupId>com.google.auto.service</groupId>
-                            <artifactId>auto-service</artifactId>
-                            <version>${auto-service.version}</version>
-                        </annotationProcessorPath>
-                    </annotationProcessorPaths>
-                    <annotationProcessors>
-                        <annotationProcessor>io.soabase.recordbuilder.processor.RecordBuilderProcessor</annotationProcessor>
-                        <annotationProcessor>com.google.auto.service.processor.AutoServiceProcessor</annotationProcessor>
-                    </annotationProcessors>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 </project>
